applications/argocd/argocd-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-server-virtualservice
  namespace: argocd
spec:
  hosts:
  - argocd.idp.local
  gateways:
  - istio-system/idp-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: argocd-server
        port:
          number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: argocd-server-destinationrule
  namespace: argocd
spec:
  host: argocd-server
  trafficPolicy:
    tls:
      mode: DISABLE
